--- a/settings.json
+++ b/settings.json
@@ -3,8 +3,8 @@
 "autoplaymusic": true,
 "autocomposing": true,
 "autorecording": false,
-"NamaBot":"HelgaBot",
-"NomorOwner":"6282138919347",
-"NamaOwner":"Helga`",
+"NamaBot":"DILLBOTZ",
+"NomorOwner":"6288271771627",
+"NamaOwner":"Fadhil`",
 "HunterApi":"Ikyy69"
 }
